testing/demo-app-one/manifests/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caddy
spec:
  selector:
    app: caddy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
